maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:80: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    if ((X+1)<getMondeLargeur() && (getIndication(X+1,Y)+1)==p && !estFaceMur() && aAvancer = false)
                                                                                ^JediEscaper:86: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    if ((X>0) &&(getIndication(X-1,Y)+1)==p && !estFaceMur() && aAvancer = false)
                                                             ^